tests/expected_invalid_non_reason_yields.diag.out
<input>:7:30: error: 'fails' must reference a reason type, not 'state'
    public fn bad() -> Int fails NotAReason
                                 ^^^^^^^^^^
